# granola-sync

./: .gitignore  DEPLOYMENT.md  README.md
granola-api/: chatgpt-gpt-instructions.md  openapi.yaml  package.json  wrangler.toml
granola-api/src/: index.js
granola-sync/: README.md  pyproject.toml
granola-sync/src/granola_sync/: __init__.py  __main__.py  api.py  cli.py  cloud.py  config.py  export.py
