[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "granola-sync"
version = "0.1.0"
description = "Sync Granola meeting transcripts to local folders"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Hazel Health Engineering" }
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
granola-sync = "granola_sync.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
